plugins {
    id 'com.asrevo.java-application-conventions'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
//    id 'org.graalvm.buildtools.native' version '0.9.28'
}
apply from: "$rootDir/helpers/common-methods.gradle"
group = 'com.asrevo.cvhome'

java {
    sourceCompatibility = '21'
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

springBoot {
    buildInfo()
}

bootBuildImage {
    builder = "paketobuildpacks/builder-jammy-tiny:latest"
    imageName = createImageName("store-pod/store")
    tags = createImageTags("store-pod/store",project.version)
    docker {
        publishRegistry {
            url = System.getenv("REGISTRY")
            username = System.getenv("ECR_TOKEN") ? 'AWS' : null
            password = System.getenv("ECR_TOKEN")
        }
    }
}

ext {
    set('springCloudVersion', "2023.0.0")
}
dependencies {
    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'

    implementation 'software.amazon.awssdk:s3:2.25.31'

    implementation 'commons-validator:commons-validator:1.8.0'
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    implementation project(':commons:ecs-commons:fargate-task-info')
    implementation project(':commons:ecs-commons:ecs-service-discoveryclient')

    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'

    implementation project(':store-pod:store:store-core')
    implementation project(':store-pod:store:store-events')
    implementation project(':commons:s2sc-commons')

//    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'rocks.cleancode:hamcrest-record:1.0.0'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}
